; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_snd.c_snd_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_snd.c_snd_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ctxt = type { i32, i32, i32* }
%struct.inode = type { i32 }
%struct.file = type { %struct.snd_ctxt* }

@the_snd = common dso_local global %struct.snd_ctxt zeroinitializer, align 8
@RPC_SND_PROG = common dso_local global i32 0, align 4
@RPC_SND_VERS = common dso_local global i32 0, align 4
@MSM_RPC_UNINTERRUPTIBLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"snd: failed to connect snd svc\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"snd already opened.\0A\00", align 1
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @snd_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.snd_ctxt*, align 8
  %6 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  store %struct.snd_ctxt* @the_snd, %struct.snd_ctxt** %5, align 8
  store i32 0, i32* %6, align 4
  %7 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %8 = getelementptr inbounds %struct.snd_ctxt, %struct.snd_ctxt* %7, i32 0, i32 1
  %9 = call i32 @mutex_lock(i32* %8)
  %10 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %11 = getelementptr inbounds %struct.snd_ctxt, %struct.snd_ctxt* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %46

14:                                               ; preds = %2
  %15 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %16 = getelementptr inbounds %struct.snd_ctxt, %struct.snd_ctxt* %15, i32 0, i32 2
  %17 = load i32*, i32** %16, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %40

19:                                               ; preds = %14
  %20 = load i32, i32* @RPC_SND_PROG, align 4
  %21 = load i32, i32* @RPC_SND_VERS, align 4
  %22 = load i32, i32* @MSM_RPC_UNINTERRUPTIBLE, align 4
  %23 = call i32* @msm_rpc_connect(i32 %20, i32 %21, i32 %22)
  %24 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %25 = getelementptr inbounds %struct.snd_ctxt, %struct.snd_ctxt* %24, i32 0, i32 2
  store i32* %23, i32** %25, align 8
  %26 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %27 = getelementptr inbounds %struct.snd_ctxt, %struct.snd_ctxt* %26, i32 0, i32 2
  %28 = load i32*, i32** %27, align 8
  %29 = call i64 @IS_ERR(i32* %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %39

31:                                               ; preds = %19
  %32 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %33 = getelementptr inbounds %struct.snd_ctxt, %struct.snd_ctxt* %32, i32 0, i32 2
  %34 = load i32*, i32** %33, align 8
  %35 = call i32 @PTR_ERR(i32* %34)
  store i32 %35, i32* %6, align 4
  %36 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %37 = getelementptr inbounds %struct.snd_ctxt, %struct.snd_ctxt* %36, i32 0, i32 2
  store i32* null, i32** %37, align 8
  %38 = call i32 @pr_err(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  br label %51

39:                                               ; preds = %19
  br label %40

40:                                               ; preds = %39, %14
  %41 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %42 = load %struct.file*, %struct.file** %4, align 8
  %43 = getelementptr inbounds %struct.file, %struct.file* %42, i32 0, i32 0
  store %struct.snd_ctxt* %41, %struct.snd_ctxt** %43, align 8
  %44 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %45 = getelementptr inbounds %struct.snd_ctxt, %struct.snd_ctxt* %44, i32 0, i32 0
  store i32 1, i32* %45, align 8
  br label %50

46:                                               ; preds = %2
  %47 = call i32 @pr_err(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %48 = load i32, i32* @EBUSY, align 4
  %49 = sub nsw i32 0, %48
  store i32 %49, i32* %6, align 4
  br label %50

50:                                               ; preds = %46, %40
  br label %51

51:                                               ; preds = %50, %31
  %52 = load %struct.snd_ctxt*, %struct.snd_ctxt** %5, align 8
  %53 = getelementptr inbounds %struct.snd_ctxt, %struct.snd_ctxt* %52, i32 0, i32 1
  %54 = call i32 @mutex_unlock(i32* %53)
  %55 = load i32, i32* %6, align 4
  ret i32 %55
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32* @msm_rpc_connect(i32, i32, i32) #1

declare dso_local i64 @IS_ERR(i32*) #1

declare dso_local i32 @PTR_ERR(i32*) #1

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
